--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -32,3 +32,6 @@
             = link_to 'Sign up', new_user_registration_path
           %li
             = link_to 'Sign in', user_session_path
+          %li
+            = link_to(user_omniauth_authorize_path(:facebook)) do
+              %span.fa.fa-facebook              
