--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Bookstore
     = javascript_include_tag "application", "data-turbolinks-track" => true
-    = stylesheet_link_tag    'custom', 'bootstrap', 'shop-homepage', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'custom', 'bootstrap', 'shop-homepage', 'bootstrap-social', 'font-awesome', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'jquery', 'bootstrap', 'data-turbolinks-track' => true
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
 
