Small fixes. Assets

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -34,4 +34,4 @@
             = link_to 'Sign in', user_session_path
           %li
             = link_to(user_omniauth_authorize_path(:facebook)) do
-              %span.fa.fa-facebook              
+              %span.fa.fa-facebook-official        
