--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -14,7 +14,7 @@
                   = link_to book.title, book
               %td
                 %h4
-                  = book.price
+                  = number_to_currency(book.price)
   .row
     .text-center
       = paginate @books
