--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -24,7 +24,7 @@
                 %span.glyphicon.glyphicon-star
               - else
                 %span.glyphicon.glyphicon-star-empty
-            = @book.ratings.average(:rating)
+            = number_with_precision(@book.ratings.average(:rating), precision: 2)
       .well
         .text-right
           = link_to 'Leave a review', new_book_rating_path(@book), class: 'btn btn-success'
