--- a/app/views/credit_cards/_credentials.html.haml
+++ b/app/views/credit_cards/_credentials.html.haml
@@ -1,7 +1,7 @@
 = form_for @card, url: {controller: "credit_cards", action: "update"}, method: :patch do |f|
   - if @card.errors.any?
     #error_explanation.alert.alert-danger
-      %h2= "#{pluralize(@card.errors.count, "error")} prohibited this order from being saved:"
+      %h4= "#{pluralize(@card.errors.count, "error")} prohibited this order from being saved:"
       %ul
         - @card.errors.full_messages.each do |msg|
           %li= msg
@@ -9,14 +9,19 @@
     = f.label :number
     = f.text_field :number, class: 'form-control'
   .form-group
+    .row    
+      .col-xs-6
+        = f.label :expiration_month
+        = f.collection_select :expiration_month, CreditCard.months, :to_s, :to_s, {:selected => @card.expiration_month || '01'}, :class => 'form-control'
+      .col-xs-6
+        = f.label :expiration_year
+        = f.collection_select :expiration_year, CreditCard.years, :to_s, :to_s, {:selected => @card.expiration_year || Time.now.year.to_s}, :class => 'form-control'
+  .form-group
     = f.label :cvv
-    = f.text_field :cvv, class: 'form-control'
-  .form-group
-    = f.label :expiration_year
-    = f.text_field :expiration_year, class: 'form-control'
-  .form-group
-    = f.label :expiration_month
-    = f.text_field :expiration_month, class: 'form-control'
+    .form-inline
+      = f.text_field :cvv, class: 'form-control form-inline one-line'
+      = link_to 'What is this?', '#'
+        
   .form-group
     = f.label :firstname
     = f.text_field :firstname, class: 'form-control', :value => current_user.firstname
@@ -25,4 +30,7 @@
     = f.text_field :lastname, class: 'form-control', :value => current_user.lastname
 
   .actions
-    = f.submit 'Save and continue', class: 'btn btn-success'
+    .col-md-6
+      = link_to 'Back', user_order_shippings_path, class: 'btn btn-default btn-block'
+    .col-md-6
+      = f.submit 'Continue', class: 'btn btn-success btn-block'
