fix address controller/orders index

--- a/app/views/orders/edit.html.haml
+++ b/app/views/orders/edit.html.haml
@@ -60,7 +60,7 @@
         = @order.credit_card.expiration_month
         #{"/"}
         = @order.credit_card.expiration_year
-
+  
   .row
     .col-md-12
       .thumbnail
@@ -100,8 +100,8 @@
                     %td
                       $#{item.price * item.qty}
                 %tr.line
-                  %td{colspan: 3}
-                  %td.text-right
+                  %td{colspan: 2}
+                  %td.text-right{colspan: 2}
                     %strong
                       Subtotal:
                       %br
@@ -111,8 +111,8 @@
                     %br
                     = number_to_currency(@order.shipping.costs)
                 %tr
-                  %td{colspan: 3}
-                  %td.text-right
+                  %td{colspan: 2}
+                  %td.text-right{colspan: 2}
                     %strong
                       Order total:
                   %td
