--- a/app/views/addresses/editshipping.html.haml
+++ b/app/views/addresses/editshipping.html.haml
@@ -10,16 +10,22 @@
       = link_to 'Complete', '#', :class => "btn btn-default"
 
     .row
-      = form_for @address, url: {controller: "addresses", action: "update"}, method: :patch  do |f|
+      = form_for @billing, url: {controller: "addresses", action: "update"}, method: :patch  do |f|
         .col-md-4.col-sm-4
           %h2
             Billing Address  
-          - if @address.errors.any?
+          - if @billing.errors.any?
             #error_explanation.alert.alert-danger
-              %h4= "#{pluralize(@address.errors.count, "error")} prohibited this order from being saved:"
+              %h4= "#{pluralize(@billing.errors.count, "error")} prohibited this order from being saved:"
               %ul
-                - @address.errors.full_messages.each do |msg|
+                - @billing.errors.full_messages.each do |msg|
                   %li= msg
+          .form-group
+            = f.label :firstname
+            = f.text_field :firstname, class: 'form-control', disabled: 'true', :value => current_user.firstname
+          .form-group
+            = f.label :lastname
+            = f.text_field :lastname, class: 'form-control', disabled: 'true', :value => current_user.lastname
           .form-group
             = f.label :address
             = f.text_field :address, class: 'form-control', disabled: 'true'
@@ -38,13 +44,19 @@
       .col-md-4.col-sm-4.text-center
         %h2
           Shipping Address 
-        = form_for @shipping_address, url: { controller: "addresses", action: "addshipping" }, method: :post do |ship|
-          - if @shipping_address.errors.any?
+        = form_for @shipping, as: :shipping_address, url: { controller: "addresses", action: "addshipping" }, method: :post do |ship|
+          - if @shipping.errors.any?
             #error_explanation.alert.alert-danger
-              %h4= "#{pluralize(@shipping_address.errors.count, "error")} prohibited this order from being saved:"
+              %h4= "#{pluralize(@shipping.errors.count, "error")} prohibited this order from being saved:"
               %ul
-                - @shipping_address.errors.full_messages.each do |msg|
+                - @shipping.errors.full_messages.each do |msg|
                   %li= msg
+          .form-group
+            = ship.label :firstname
+            = ship.text_field :firstname, class: 'form-control'
+          .form-group
+            = ship.label :lastname
+            = ship.text_field :lastname, class: 'form-control'
           .form-group
             = ship.label :address
             = ship.text_field :address, class: 'form-control'
