--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,6 @@
 .container
   .row
-    = form_for @billing, url: {controller: "users", action: "update_billing"}, method: :patch  do |f|
+    = form_for @billing, as: :billing_address, url: {controller: "users", action: "update_billing"}, method: :patch  do |f|
       .col-md-6.col-sm-6
         %h2
           Billing Address  
@@ -10,6 +10,12 @@
             %ul
               - @billing.errors.full_messages.each do |msg|
                 %li= msg
+        .form-group
+          = f.label :firstname
+          = f.text_field :firstname, class: 'form-control'
+        .form-group
+          = f.label :lastname
+          = f.text_field :lastname, class: 'form-control'
         .form-group
           = f.label :address
           = f.text_field :address, class: 'form-control'
@@ -27,16 +33,22 @@
           = f.collection_select :country, Country.order(:name), :id, :name, {}, {class: 'form-control'}
         .actions
           = f.submit 'Save', class: 'btn btn-success btn-block'
-    .col-md-6.col-sm-6.text-center
+    .col-md-6.col-sm-6
       %h2
         Shipping Address 
-      = form_for @shipping, url: { controller: "users", action: "update_shipping" }, method: :patch do |f|
+      = form_for @shipping, as: :shipping_address, url: { controller: "users", action: "update_shipping" }, method: :patch do |f|
         - if @shipping.errors.any?
           #error_explanation.alert.alert-danger
             %h4= "#{pluralize(@shipping.errors.count, "error")} prohibited this order from being saved:"
             %ul
               - @shipping.errors.full_messages.each do |msg|
                 %li= msg
+        .form-group
+          = f.label :firstname
+          = f.text_field :firstname, class: 'form-control'
+        .form-group
+          = f.label :lastname
+          = f.text_field :lastname, class: 'form-control'
         .form-group
           = f.label :address
           = f.text_field :address, class: 'form-control'
@@ -63,7 +75,7 @@
           %ul
             - @user.errors.full_messages.each do |msg|
               %li= msg
-    = form_for @user, url: {controller: "users", action: "update"}, method: :patch  do |f|
+    = form_for @user, url: {controller: "users", action: "update_email"}, method: :patch  do |f|
       .col-md-6.col-sm-6
         %h2
           Email
