--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -13,22 +13,22 @@
             = @book.description
         .ratings
           %p.pull-right
-            = @book.ratings.count
+            = @book.ratings.where(:aasm_state => 'approved').count
             reviews
           %p
             - 5.times do |n|
-              - if @book.ratings.average(:rating).nil?
+              - if @book.ratings.where(:aasm_state => 'approved').average(:rating).nil?
                 Not rated yet
                 - break
-              - elsif @book.ratings.average(:rating).ceil > n
+              - elsif @book.ratings.where(:aasm_state => 'approved').average(:rating).ceil > n
                 %span.glyphicon.glyphicon-star
               - else
                 %span.glyphicon.glyphicon-star-empty
-            = number_with_precision(@book.ratings.average(:rating), precision: 2)
+            = number_with_precision(@book.ratings.where(:aasm_state => 'approved').average(:rating), precision: 2)
       .well
         .text-right
           = link_to 'Leave a review', new_book_rating_path(@book), class: 'btn btn-success'
-        - @book.ratings.order(created_at: :desc).each do |rating|
+        - @book.ratings.where(:aasm_state => 'approved').order(created_at: :desc).each do |rating|
           %hr
           .row
             .col-md-12
